Git_WGBH_QC/src/objects/TRANSACTION_BATCH__c.object
<CustomObject>
    <fields>
        <fullName>Account_Email__c</fullName>
        <formula>Account__r.Household_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>TRANSACTION_BATCHS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Batch_Number__c</fullName>
        <description>Unique key for the batch</description>
        <label>Batch Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CC_EFT_Alias__c</fullName>
        <formula>if( ISPICKVAL(Transaction_Type__c ,&apos;PAYMENT&apos;),HYPERLINK(&quot;/&quot;&amp;Giving_Id__r.CC_EFT_Alias__c, Giving_Id__r.CC_EFT_Alias__r.Name),
HYPERLINK(&quot;/&quot;&amp; Refund__r.CC_Alias__c, Refund__r.CC_Alias__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC &amp; EFT Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Card_Type__c</fullName>
        <formula>Case ( Giving_Id__r.Charge_Card_Type__c, &quot;Convio American Express No GUID&quot;, &quot;Convio Charge&quot;,
&quot;Convio MasterCard No GUID&quot;, &quot;Convio Charge&quot;,
&quot;Convio VISA No GUID&quot;, &quot;Convio Charge&quot;,
&quot;Convio Discover No GUID&quot;, &quot;Convio Charge&quot;,
&quot;Charge Card No GUID&quot;, &quot;NO GUID&quot;,&quot;&quot;)</formula>
        <label>Charge Card Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email_Address__c</fullName>
        <formula>Giving_Id__r.Oppty_Related_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFT_ORIGINATOR_ID__c</fullName>
        <label>EFT ORIGINATOR ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <description>the GUID from the pledge to be processed</description>
        <label>GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Giving_Creator_Alias__c</fullName>
        <formula>Giving_Id__r.CreatedBy.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Giving Creator Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Giving_Id__c</fullName>
        <label>Giving</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>TRANSACTION_BATCHS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Giving_Last_Modified_by__c</fullName>
        <formula>Giving_Id__r.LastModifiedBy.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Giving Last Modified by</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Giving_salesforce_ID__c</fullName>
        <formula>Giving_Id__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Giving ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Account_ID__c</fullName>
        <formula>Account__r.TA_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legacy Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Id__c</fullName>
        <label>Merchant_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Key__c</fullName>
        <label>Merchant_Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_NUMBER__c</fullName>
        <externalId>true</externalId>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <description>The id of the pledge</description>
        <label>Opportunity_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <description>The amount to be processed from the pledge</description>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <formula>Case ( Giving_Id__r.payment_method__c, &quot;Charge Card&quot;,&quot;Charge Card&quot;,
&quot;Electronic Funds Transfer&quot;, &quot;Electronic Funds Transfer&quot;,&quot;&quot;)</formula>
        <label>Payment Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pledge_Number__c</fullName>
        <description>The pledge number from the pledge</description>
        <label>Pledge Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Address__c</fullName>
        <formula>Account__r.Preferred_Address__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preferred Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_date__c</fullName>
        <description>The date the batch is being processed</description>
        <label>Process Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>REFERENCE__c</fullName>
        <externalId>true</externalId>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund__c</fullName>
        <label>Refund</label>
        <referenceTo>Refund__c</referenceTo>
        <relationshipName>TRANSACTION_BATCHS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_URL__c</fullName>
        <label>Request URL</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Code__c</fullName>
        <label>Response_Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Message__c</fullName>
        <description>If the payment is rejected what is the message</description>
        <label>Response_Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sage_Response__c</fullName>
        <label>Sage_Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Schedule_Start_Date__c</fullName>
        <formula>Giving_Id__r.schedule_start_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <formula>case(Giving_Id__r.CC_EFT_Alias__r.Merchant_Account__r.Station__c, &quot;WGBH&quot;, &quot;WGBH&quot;, &quot;WGBY&quot;, &quot;WGBY&quot;, &quot;WCAI&quot;, &quot;WCAI&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Station</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status has the payment been sent and a response received from Sage</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>SUCCESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLOSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROCESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REVIEW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submit_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>How many times the payment has been submitted for processing</description>
        <label>Submit_Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Method__c</fullName>
        <formula>if(Refund__c != null, TEXT(Refund__r.Refund_Method__c) , TEXT(Giving_Id__r.payment_method__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>REFUND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAYMENT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UpdateCCDate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UpdateCCDate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCCDateExpired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Auto set Checked when Charge Card Date expired.</description>
        <inlineHelpText>Auto set Checked when Charge Card Date expired.Do not change this Fields.</inlineHelpText>
        <label>isCCDateExpired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>needToRePaymentReq__c</fullName>
        <defaultValue>false</defaultValue>
        <label>needToRePaymentReq</label>
        <type>Checkbox</type>
    </fields>
    <label>Transaction Batch</label>
    <listViews>
        <fullName>AllFailedCCtransactions</fullName>
        <columns>CC_EFT_Alias__c</columns>
        <columns>Submit_Count__c</columns>
        <columns>Schedule_Start_Date__c</columns>
        <columns>NAME</columns>
        <columns>Merchant_Id__c</columns>
        <columns>Merchant_Key__c</columns>
        <columns>EFT_ORIGINATOR_ID__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>Response_Message__c</columns>
        <columns>Account__c</columns>
        <columns>Giving_Id__c</columns>
        <columns>ORDER_NUMBER__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Response_Code__c</columns>
        <columns>Transaction_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>FAIL</value>
        </filters>
        <filters>
            <field>Charge_Card_Type__c</field>
            <operation>notContain</operation>
            <value>Convio</value>
        </filters>
        <filters>
            <field>Payment_Method__c</field>
            <operation>equals</operation>
            <value>Charge Card</value>
        </filters>
        <label>All Failed CC Transactions</label>
    </listViews>
    <listViews>
        <fullName>AllFailedEFTtransactions</fullName>
        <columns>NAME</columns>
        <columns>CC_EFT_Alias__c</columns>
        <columns>Giving_Id__c</columns>
        <columns>Account__c</columns>
        <columns>Response_Message__c</columns>
        <columns>Merchant_Id__c</columns>
        <columns>Process_date__c</columns>
        <columns>Schedule_Start_Date__c</columns>
        <columns>Merchant_Key__c</columns>
        <columns>EFT_ORIGINATOR_ID__c</columns>
        <columns>Payment_Method__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>FAIL</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Olson</value>
        </filters>
        <label>All Failed EFT Transactions</label>
    </listViews>
    <listViews>
        <fullName>AllRefunds</fullName>
        <columns>Schedule_Start_Date__c</columns>
        <columns>NAME</columns>
        <columns>Transaction_Type__c</columns>
        <columns>Account__c</columns>
        <columns>Giving_Id__c</columns>
        <columns>Status__c</columns>
        <columns>Response_Message__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Process_date__c</columns>
        <columns>ORDER_NUMBER__c</columns>
        <columns>Merchant_Id__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>GUID__c</columns>
        <columns>Merchant_Key__c</columns>
        <columns>Pledge_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Transaction_Type__c</field>
            <operation>equals</operation>
            <value>REFUND</value>
        </filters>
        <label>All Refunds</label>
    </listViews>
    <listViews>
        <fullName>AllSuccesfulTransactions</fullName>
        <columns>Schedule_Start_Date__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>NAME</columns>
        <columns>Transaction_Type__c</columns>
        <columns>Account__c</columns>
        <columns>Giving_Id__c</columns>
        <columns>Pledge_Number__c</columns>
        <columns>Status__c</columns>
        <columns>Response_Message__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Process_date__c</columns>
        <columns>ORDER_NUMBER__c</columns>
        <columns>Merchant_Id__c</columns>
        <columns>Merchant_Key__c</columns>
        <columns>GUID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>SUCCESS</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Kamii</value>
        </filters>
        <label>All Succesful Transactions</label>
    </listViews>
    <listViews>
        <fullName>AllTransactionsforProcess</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>Schedule_Start_Date__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>NAME</columns>
        <columns>Transaction_Type__c</columns>
        <columns>Account__c</columns>
        <columns>Giving_Id__c</columns>
        <columns>Pledge_Number__c</columns>
        <columns>Status__c</columns>
        <columns>Response_Message__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Process_date__c</columns>
        <columns>ORDER_NUMBER__c</columns>
        <columns>Merchant_Id__c</columns>
        <columns>Merchant_Key__c</columns>
        <columns>GUID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>PROCESS</value>
        </filters>
        <label>All Transactions for Process</label>
    </listViews>
    <listViews>
        <fullName>TodayFailedCCtransactions</fullName>
        <columns>Schedule_Start_Date__c</columns>
        <columns>Response_Message__c</columns>
        <columns>Account__c</columns>
        <columns>Giving_Id__c</columns>
        <columns>NAME</columns>
        <columns>Merchant_Id__c</columns>
        <columns>Merchant_Key__c</columns>
        <columns>EFT_ORIGINATOR_ID__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>ORDER_NUMBER__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Response_Code__c</columns>
        <columns>Transaction_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>FAIL</value>
        </filters>
        <filters>
            <field>Charge_Card_Type__c</field>
            <operation>notContain</operation>
            <value>Convio</value>
        </filters>
        <filters>
            <field>Payment_Method__c</field>
            <operation>contains</operation>
            <value>Charge</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Failed CC Transactions</label>
    </listViews>
    <listViews>
        <fullName>TodayFailedEFTtransactions</fullName>
        <columns>Schedule_Start_Date__c</columns>
        <columns>Response_Message__c</columns>
        <columns>Account__c</columns>
        <columns>Giving_Id__c</columns>
        <columns>NAME</columns>
        <columns>Merchant_Id__c</columns>
        <columns>Merchant_Key__c</columns>
        <columns>EFT_ORIGINATOR_ID__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>ORDER_NUMBER__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Response_Code__c</columns>
        <columns>Transaction_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>FAIL</value>
        </filters>
        <filters>
            <field>Charge_Card_Type__c</field>
            <operation>notContain</operation>
            <value>Convio</value>
        </filters>
        <filters>
            <field>Payment_Method__c</field>
            <operation>equals</operation>
            <value>Electronic Funds Transfer</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Failed EFT Transactions</label>
    </listViews>
    <listViews>
        <fullName>TodaysFailtransactions</fullName>
        <columns>Schedule_Start_Date__c</columns>
        <columns>NAME</columns>
        <columns>Payment_Method__c</columns>
        <columns>Response_Message__c</columns>
        <columns>Charge_Card_Type__c</columns>
        <columns>Account__c</columns>
        <columns>Giving_Id__c</columns>
        <columns>ORDER_NUMBER__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Response_Code__c</columns>
        <columns>Transaction_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process_date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>FAIL</value>
        </filters>
        <filters>
            <field>Charge_Card_Type__c</field>
            <operation>notContain</operation>
            <value>Convio</value>
        </filters>
        <label>Today&apos;s FailedTransactions</label>
    </listViews>
    <listViews>
        <fullName>TodaysSuccesstransactions</fullName>
        <columns>Schedule_Start_Date__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>NAME</columns>
        <columns>Transaction_Type__c</columns>
        <columns>Account__c</columns>
        <columns>Giving_Id__c</columns>
        <columns>Status__c</columns>
        <columns>Response_Message__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Process_date__c</columns>
        <columns>ORDER_NUMBER__c</columns>
        <columns>Merchant_Id__c</columns>
        <columns>GUID__c</columns>
        <columns>Merchant_Key__c</columns>
        <columns>Pledge_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>SUCCESS</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Successful Transactions</label>
    </listViews>
    <listViews>
        <fullName>TodaysUpatedtransactions</fullName>
        <columns>Schedule_Start_Date__c</columns>
        <columns>NAME</columns>
        <columns>Transaction_Type__c</columns>
        <columns>Account__c</columns>
        <columns>Giving_Id__c</columns>
        <columns>Status__c</columns>
        <columns>Response_Message__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Process_date__c</columns>
        <columns>ORDER_NUMBER__c</columns>
        <columns>Merchant_Id__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>GUID__c</columns>
        <columns>Merchant_Key__c</columns>
        <columns>Pledge_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>SUCCESS,FAIL,CLOSE</value>
        </filters>
        <label>Today&apos;s Updated Transactions</label>
    </listViews>
    <listViews>
        <fullName>Todaystransactions</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>Schedule_Start_Date__c</columns>
        <columns>Payment_Method__c</columns>
        <columns>NAME</columns>
        <columns>Transaction_Type__c</columns>
        <columns>Account__c</columns>
        <columns>Giving_Id__c</columns>
        <columns>Pledge_Number__c</columns>
        <columns>Status__c</columns>
        <columns>Response_Message__c</columns>
        <columns>Payment_Amount__c</columns>
        <columns>Process_date__c</columns>
        <columns>ORDER_NUMBER__c</columns>
        <columns>Merchant_Id__c</columns>
        <columns>Merchant_Key__c</columns>
        <columns>GUID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Schedule_Start_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>PROCESS</value>
        </filters>
        <label>Today&apos;s Transactions</label>
    </listViews>
    <nameField>
        <displayFormat>TBR-{00000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Batch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>